Crex/tests/type_declarations/intersection_types/invalid_types/invalid_void_type.crxt
--TEST--
void type cannot take part in an intersection type
--FILE--
<?crx

function foo(): void&Iterator {}

?>
--EXPECTF--
Fatal error: Type void cannot be part of an intersection type in %s on line %d
